--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,9 @@
 <resources>
-    <string name="app_name">MyFirstApp</string>
+    <string name="app_name">Main</string>
 
-    <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="action_search">Search</string>
+    <string name="title_activity_display_message">My Messages</string>
+    <string name="button_send">Send</string>
+    <string name="edit_message">Send a message</string>
 </resources>
